# prettier_prints

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
prettier_prints/: ansi_styling.py  myfunctions.py  prettier_prints.py  prettier_printsv2.py
tests/: prettier_prints.py  test_prettier_prints.py
