[project]
name = "prettier_prints"
version = "1.1"
authors = [
  { name="Dylan Stocking", email="dstocking0823@gmail.com" },
]
maintainers = [
    { name = "Dylan Stocking" },
]
description = "colored outputs library for easier readability and styling"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PhantomLeak/prettier_prints"
"Bug Tracker" = "https://github.com/PhantomLeak/prettier_prints/issues"